--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
     "@discordjs/rest": "^0.1.0-canary.0",
     "@types/node-canvas-text": "^1.0.0",
     "axios": "^0.21.4",
+    "better-sqlite3": "^7.4.3",
     "canvas": "^2.8.0",
     "discord-api-types": "^0.23.1",
     "discord.js": "^13.1.0",
     "jimp": "^0.16.1",
     "node-canvas-text": "^1.0.2",
-    "request": "^2.88.2",
-    "sqlite3": "^5.0.2"
+    "request": "^2.88.2"
   }
 }
