--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,12 @@
 {
-    "compilerOptions": {
-        "module": "commonjs",
-        "target": "es2020",
-        "jsx": "preserve",
-        "strictFunctionTypes": true,
-        "strictPropertyInitialization": false,
-        "sourceMap": true
-    },
-    "exclude": [
-        "node_modules",
-        "**/node_modules/*"
-    ]
+	"compilerOptions": {
+		"experimentalDecorators": true,
+		"module": "commonjs",
+		"target": "es2020",
+		"jsx": "preserve",
+		"strictFunctionTypes": true,
+		"strictPropertyInitialization": false,
+		"sourceMap": true
+	},
+	"exclude": ["node_modules", "**/node_modules/*"]
 }
