--- a/package.json
+++ b/package.json
@@ -23,21 +23,23 @@
 		"@discordjs/rest": "^0.1.0-canary.0",
 		"@types/node-canvas-text": "^1.0.0",
 		"axios": "^0.21.4",
-		"better-sqlite3": "^7.4.3",
 		"canvas": "^2.8.0",
 		"discord-api-types": "^0.23.1",
 		"discord.js": "^13.5.1",
-		"ioredis": "^5.0.4",
 		"jest": "^27.4.3",
 		"node-canvas-text": "^1.0.2",
+		"pg": "^8.7.3",
 		"puppeteer": "^13.4.0",
 		"redis": "^4.1.0",
+		"redis-typescript": "^0.1.2",
 		"request": "^2.88.2",
+		"tedis": "^0.1.12",
 		"typescript": "^4.5.2"
 	},
 	"devDependencies": {
 		"@types/better-sqlite3": "^7.4.2",
 		"@types/jest": "^27.0.3",
+		"@types/pg": "^8.6.5",
 		"nodemon": "^2.0.15",
 		"ts-node": "^10.4.0"
 	}
