--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,22 +1,19 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-
-        {
-            "console": "internalConsole",
-            "internalConsoleOptions": "neverOpen",
-            "name": "Bot",
-            "program": "${workspaceFolder}/index.ts",
-            "request": "launch",
-            "restart": true,
-            "runtimeExecutable": "ts-node",
-            "skipFiles": [
-                "<node_internals>/**"
-            ],
-            "type": "pwa-node"
-        }
-    ]
+	// Use IntelliSense to learn about possible attributes.
+	// Hover to view descriptions of existing attributes.
+	// For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+	"version": "0.2.0",
+	"configurations": [
+		{
+			"console": "internalConsole",
+			"internalConsoleOptions": "neverOpen",
+			"name": "Bot",
+			"program": "${workspaceFolder}/src/index.ts",
+			"request": "launch",
+			"restart": true,
+			"runtimeExecutable": "ts-node",
+			"skipFiles": ["<node_internals>/**"],
+			"type": "pwa-node"
+		}
+	]
 }
